--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@strapi/plugin-users-permissions": "4.5.5",
     "@strapi/provider-upload-cloudinary": "4.5.5",
     "@strapi/strapi": "4.5.5",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "strapi-plugin-populate-deep": "^2.0.0",
+    "strapi-provider-upload-do": "^3.6.9"
   },
   "author": {
     "name": "A Strapi developer"
