--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-i18n": "4.5.5",
     "@strapi/plugin-users-permissions": "4.5.5",
     "@strapi/provider-upload-cloudinary": "4.5.5",
     "@strapi/strapi": "4.5.5",
     "pg": "8.8.0",
+    "strapi-plugin-import-export-entries": "^1.19.2",
     "strapi-plugin-populate-deep": "^2.0.0",
     "strapi-provider-upload-do": "^3.6.9"
   },
